# threat-intel-vector-db

./: .env_example  .gitignore  docker-compose.yaml  pyproject.toml
qdrant_config/: config.yaml
scripts/: create_index.py  fetch_sources.py  preprocessing.py  routing_generation.py  run_pipeline.py  update_state.py
src/: app.py  main.py  other_functions.py  routing_rules.py
src/api/: router_chat.py  schema.py
src/preprocessing/: __init__.py  enisa_preprocessing.py  kev_preprocessing.py  mitre_preprocessing.py
src/processes/: query_orchestrator.py
src/routing/: routing_rules.py
src/services/: embeddings.py  llms.py  vector_store.py
